# QtVLC

./: .gitignore  CMakeLists.txt  README.md  main.cpp  player.cpp  player.h
cmake/: FindLIBVLC.cmake
